# entropyscan

./: Dockerfile  INTEGRATIONS.md  INTEROP.md  README.md  ROADMAP.md  install.ps1  install.sh  layman.md  pyproject.toml
.github/workflows/: ci.yml  ports.yml
demos/: _make_all.py
demos/01-basic/: SCENARIO.md  make_sample.py
demos/04-packed-elf/: SCENARIO.md
demos/05-office-macro/: SCENARIO.md  sample.doc
demos/06-pcap-tls/: SCENARIO.md  capture.pcap
demos/07-leaked-secret/: SCENARIO.md  config.bundle
demos/08-clean-release/: SCENARIO.md  artifact.txt
demos/09-stego-carrier/: SCENARIO.md
demos/10-memory-dump/: SCENARIO.md  process.dmp
deploy/: docker-compose.yml  k8s.yaml
deploy/terraform/: main.tf
docs/: ADVANCED.md  ARCHITECTURE.md  DEPLOY.md  INSTALL.md
entropyscan/: __init__.py  __main__.py  cli.py  connect.py  core.py  mcp_server.py
examples/: help.txt  version.txt
ports/: README.md
ports/go/: go.mod  main.go  main_test.go
ports/javascript/: index.js  index.test.js  package.json
ports/rust/: Cargo.toml
ports/rust/src/: main.rs
tests/: test_connect.py  test_engine.py  test_smoke.py
