[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "cognis-entropyscan"
version = "0.1.0"
description = "Flag packed/encrypted/high-entropy regions in files"
authors = [{name = "Cognis Digital", email = "suite@cognis.digital"}]
license = {text = "LicenseRef-COCL-1.0"}
requires-python = ">=3.10"
readme = "README.md"
keywords = ["cognis-digital", "cognis-neural-suite", "secops", "entropyscan"]
classifiers = [
    "Development Status :: 4 - Beta",
    "License :: Other/Proprietary License",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
]

[project.optional-dependencies]
mcp = ["mcp>=1.0"]
dev = ["pytest>=8.0"]

[project.urls]
Homepage = "https://cognis.digital"
Repository = "https://github.com/cognis-digital/entropyscan"

[project.scripts]
entropyscan = "entropyscan.cli:main"

[tool.hatch.build.targets.wheel]
packages = ["entropyscan"]

[tool.ruff]
line-length = 110

[tool.ruff.lint]
select = ["F", "E"]
per-file-ignores = {"entropyscan/cli.py" = ["E501"], "entropyscan/mcp_server.py" = ["E501"]}
